# manage-books

./: .devcontainer.json  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  compose.yml  gunicorn.py  pyproject.toml  pytest.ini
app/: Dependency.py  alembic.ini  app.py  dependency.py  drop.py  pyproject.toml  ruff.toml  seed.py  truncate.py
app/entity/base/: BaseId.py
app/entity/book/: Book.py  BookId.py  __init__.py
app/entity/book/category/: BookCategory.py  BookCategoryId.py  __init__.py
app/entity/session/: Session.py  SessionId.py  __init__.py
app/entity/user/: User.py  UserId.py  __init__.py
app/migrations/: env.py  migrate_target.py  script.py.mako
app/migrations/versions/: 1f0c41d2cb38_create_book_category.py  296b765588c5_create_user.py  40ba9728996f_create_book.py  5df1db434565_add_timestamp.py  6ff89315e2dc_add_user_session.py
app/orm/: settings.py
app/orm/mixins/: TimestampMixin.py
app/orm/models/: Book.py  BookCategory.py  Session.py  User.py  settings.py
app/orm/seeders/: book_category_seeder.py  run.py  seeders_session.py  users_seeder.py
app/presentation/: adr.py  route.py
app/presentation/abstract/: adr.py
app/presentation/decorators/: adr.py
app/presentation/interface/: adr.py
app/repository/: BookCategoryRepository.py  SessionRepository.py  UserRepository.py
app/service/: BookCategoryService.py  UserService.py
app/test/: conftest.py
app/test/api/: create_category_test.py  delete_category_test.py  get_category_test.py  get_user_test.py  login_test.py  update_category_test.py  user_test.py
(+25 files in other folders)
