[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Vantan"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.2"
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
psycopg2 = "^2.9.9"
ruff = "^0.2.1"
black = "^24.2.0"
werkzeug = "^3.0.1"
pydantic = "^2.6.1"
injector = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
